--- a/about.html
+++ b/about.html
@@ -82,15 +82,15 @@
 
 
 <section class="about-us-section position-relative" data-aos="fade-up">
-  <div class="about-bg-text" data-aos="fade-right" data-aos-delay="200">ABOUT US</div>
+  <div class="about-bg-text" data-aos-delay="200">ABOUT US</div>
 
   <!-- Stats Left -->
-  <div class="stats-box left-stat" data-aos="fade-up-right" data-aos-delay="400">
+  <div class="stats-box left-stat" data-aos="fade-up" data-aos-delay="400">
     100+<br><small>Homes Crafted</small>
   </div>
 
   <!-- Stats Right -->
-  <div class="stats-box right-stat" data-aos="fade-up-left" data-aos-delay="400">
+  <div class="stats-box right-stat" data-aos="fade-up" data-aos-delay="400">
     150+<br><small>Clients Satisfied</small>
   </div>
 
@@ -103,7 +103,7 @@
     <div class="row align-items-center">
       
       <!-- Text Section -->
-      <div class="col-md-7" data-aos="fade-right" data-aos-delay="200">
+      <div class="col-md-7" data-aos="zoom-in" data-aos-delay="200">
         <div class="about-text pe-md-5">
           <h6 class="text-uppercase fw-bold">About Us</h6>
           <h2 class="fw-bold mb-3">Decades of Experience in Diverse Construction Projects.</h2>
@@ -126,7 +126,7 @@
       </div>
 
       <!-- Image and Experience Box -->
-      <div class="col-md-5 text-center mt-4 mt-md-0" data-aos="fade-left" data-aos-delay="300">
+      <div class="col-md-5 text-center mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="300">
         <div class="position-relative">
           <img src="image/about.jpg" class="img-fluid rounded shadow fixed-height-img" alt="Construction Image" data-aos="zoom-in" data-aos-delay="400">
           <div class="experience-box bg-warning text-white d-flex align-items-center p-3 mt-3 rounded" data-aos="fade-up" data-aos-delay="600">
@@ -143,7 +143,7 @@
   </div>
 </section>
 <section class="team-section" data-aos="fade-up">
-  <div class="team-content" data-aos="fade-right" data-aos-delay="200">
+  <div class="team-content" data-aos="fade-down" data-aos-delay="200">
     <h6>Driven by Expertise</h6>
     <h2>MEET OUR DEDICATED TEAM</h2>
     <p>
@@ -151,7 +151,7 @@
     </p>
     <a href="contact.html" class="btn" data-aos="zoom-in" data-aos-delay="400">WORK WITH US</a>
   </div>
-  <div class="team-image" data-aos="fade-left" data-aos-delay="300">
+  <div class="team-image"  data-aos-delay="300">
     <img src="https://t4.ftcdn.net/jpg/06/35/52/21/360_F_635522132_w9sXALo7T1ruFNqPBGPfWmVXYFQipnDP.jpg" alt="Team at Work">
   </div>
 </section>
@@ -169,7 +169,7 @@
       <div class="col-md-1"></div>
 
       <!-- MISSION -->
-      <div class="col-md-4 mb-4" data-aos="fade-right" data-aos-delay="200">
+      <div class="col-md-4 mb-4" data-aos="fade-out" data-aos-delay="200">
         <div class="content-block">
           <h2>MISSION</h2>
           <p>
@@ -183,7 +183,7 @@
       <div class="col-md-1"></div>
 
       <!-- VISION -->
-      <div class="col-md-4 mb-4" data-aos="fade-left" data-aos-delay="300">
+      <div class="col-md-4 mb-4" data-aos="fade-in" data-aos-delay="300">
         <div class="content-block">
           <h2>VISION</h2>
           <p>
@@ -230,17 +230,18 @@
 </section>
 
 <div class="cta-section" data-aos="fade-up">
-  <div class="cta-text col-md-6 pe-md-4" data-aos="fade-right">
+  <div class="cta-text col-md-6 pe-md-4" data-aos="fade-in">
     <h4>Ready to Elevate Your Space?</h4>
     <p>Let’s connect and transform your ideas into stunning reality.</p>
     <div class="cta-button" data-aos="zoom-in" data-aos-delay="300">
       <a href="contact.html" class="btn">Start Your Journey</a>
     </div>
   </div>
-  <div class="cta-image col-md-6 ps-md-4 mt-4 mt-md-0" data-aos="fade-left" data-aos-delay="200">
+  <div class="cta-image col-md-6 ps-md-4 mt-4 mt-md-0" data-aos="fade-in" data-aos-delay="200">
     <img src="image/home.png" alt="Modern House" />
   </div>
 </div>
+
 
 <!-- Footer Section -->
 <footer class="footer-section text-white py-5" data-aos="fade-up">
@@ -293,11 +294,12 @@
 
     </div>
 
+  
     <!-- Divider -->
-    <hr class="border-light mt-4" data-aos="zoom-in" data-aos-delay="450">
+    <hr class="border-light mt-4">
 
     <!-- Copyright -->
-    <div class="text-center pt-2" data-aos="fade-in" data-aos-delay="500">
+    <div class="text-center pt-2" >
       <p class="mb-0">&copy; 2025 construction®. All rights reserved.</p>
     </div>
   </div>
