--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
   <div class="container">
     <div class="row cntc-bg2">
       <!-- Contact Form -->
-      <div class="col-lg-7" data-aos="fade-right">
+      <div class="col-lg-7" data-aos="fade-in">
         <h4 class="contact-form-title">Write Us Something</h4>
         <form id="contact_form" action="https://formspree.io/f/myyleorq" method="POST">
           <div class="row">
@@ -131,7 +131,7 @@
       </div>
 
       <!-- Contact Info -->
-      <div class="col-lg-5" data-aos="fade-left">
+      <div class="col-lg-5" data-aos="fade-out">
         <div class="single-contact-info-box">
           <h3 class="cntc-info-title">Contact Info</h3>
           <div class="contact-information2" data-aos="fade-left" data-aos-delay="100">
@@ -186,6 +186,7 @@
   data-aos-delay="300">
 </iframe>
 
+
 <!-- Footer Section -->
 <footer class="footer-section text-white py-5" data-aos="fade-up">
   <div class="container">
@@ -238,10 +239,10 @@
     </div>
 
     <!-- Divider -->
-    <hr class="border-light mt-4" data-aos="zoom-in" data-aos-delay="450">
+    <hr class="border-light mt-4">
 
     <!-- Copyright -->
-    <div class="text-center pt-2" data-aos="fade-in" data-aos-delay="500">
+    <div class="text-center pt-2" >
       <p class="mb-0">&copy; 2025 construction®. All rights reserved.</p>
     </div>
   </div>
