--- a/howitwork.html
+++ b/howitwork.html
@@ -354,11 +354,12 @@
 
     </div>
 
+
     <!-- Divider -->
-    <hr class="border-light mt-4" data-aos="zoom-in" data-aos-delay="450">
+    <hr class="border-light mt-4">
 
     <!-- Copyright -->
-    <div class="text-center pt-2" data-aos="fade-in" data-aos-delay="500">
+    <div class="text-center pt-2" >
       <p class="mb-0">&copy; 2025 construction®. All rights reserved.</p>
     </div>
   </div>
@@ -379,11 +380,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/intlTelInput.min.js"></script>
 
 
+<script src="js/script.js"></script>
 <!-- AOS JavaScript -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
   AOS.init();
 </script>
-<script src="js/script.js"></script>
 </body>
 </html>
