--- a/ourproject.html
+++ b/ourproject.html
@@ -219,11 +219,12 @@
 
     </div>
 
+
     <!-- Divider -->
-    <hr class="border-light mt-4" data-aos="zoom-in" data-aos-delay="450">
+    <hr class="border-light mt-4">
 
     <!-- Copyright -->
-    <div class="text-center pt-2" data-aos="fade-in" data-aos-delay="500">
+    <div class="text-center pt-2" >
       <p class="mb-0">&copy; 2025 construction®. All rights reserved.</p>
     </div>
   </div>
