--- a/service.html
+++ b/service.html
@@ -102,7 +102,7 @@
       <div class="col-md-6" data-aos="zoom-in-right">
         <img src="image/res.jpg" alt="Residential Construction" class="img-fluid rounded shadow-sm">
       </div>
-      <div class="col-md-6" data-aos="fade-left" data-aos-delay="150">
+      <div class="col-md-6" data-aos="fade-in" data-aos-delay="150">
         <h3 class="fw-bold">Residential Construction</h3>
         <p>We bring your dream home to life—from elegant villas to modern apartments. Our residential projects focus on comfort, sustainability, and timeless design tailored to your lifestyle.</p>
         <p>From concept to completion, we ensure every home reflects your personality and functional needs. We use the latest construction technologies, energy-efficient materials, and smart home integrations to enhance living experiences. Our expert architects and engineers collaborate closely with clients to deliver unmatched quality and peace of mind.</p>
@@ -119,7 +119,7 @@
       <div class="col-md-6" data-aos="zoom-in-left">
         <img src="image/come.avif" alt="Commercial Construction" class="img-fluid rounded shadow-sm">
       </div>
-      <div class="col-md-6" data-aos="fade-right" data-aos-delay="250">
+      <div class="col-md-6" data-aos="fade-in" data-aos-delay="250">
         <h3 class="fw-bold">Commercial Construction</h3>
         <p>We design and deliver commercial spaces that drive business success—retail outlets, office complexes, and mixed-use buildings with smart planning and execution.</p>
         <p>Whether you're launching a flagship store, building a multi-level corporate hub, or developing a mixed-use center, we ensure every space promotes productivity, customer experience, and brand identity. Our commercial structures are built to meet compliance, enhance aesthetics, and support long-term growth.</p>
@@ -136,7 +136,7 @@
       <div class="col-md-6" data-aos="zoom-in-right">
         <img src="image/industrial.avif" alt="Industrial Construction" class="img-fluid rounded shadow-sm">
       </div>
-      <div class="col-md-6" data-aos="fade-left" data-aos-delay="350">
+      <div class="col-md-6" data-aos="fade-out" data-aos-delay="350">
         <h3 class="fw-bold">Industrial Construction</h3>
         <p>Our industrial solutions focus on efficiency and durability. From warehouses to factories, we meet rigorous industry standards for safety, space, and scalability.</p>
         <p>We understand the unique demands of industrial environments—speed of construction, load-bearing design, ventilation, and large-scale storage. Our team specializes in optimizing layouts for logistics, heavy machinery, and future expansion. Every structure is engineered for maximum performance, reliability, and compliance with local and global standards.</p>
@@ -310,16 +310,16 @@
 
     </div>
 
+
     <!-- Divider -->
-    <hr class="border-light mt-4" data-aos="zoom-in" data-aos-delay="450">
+    <hr class="border-light mt-4">
 
     <!-- Copyright -->
-    <div class="text-center pt-2" data-aos="fade-in" data-aos-delay="500">
+    <div class="text-center pt-2" >
       <p class="mb-0">&copy; 2025 construction®. All rights reserved.</p>
     </div>
   </div>
 </footer>
-
 
   <!-- JS Scripts -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
