--- a/contact.html
+++ b/contact.html
@@ -25,54 +25,62 @@
 <div id="preloader">
   <div class="spinner"></div>
 </div>
-
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg sticky-top bg-white shadow-sm">
   <div class="container">
-    <div class="row w-100 align-items-center flex-nowrap">
-      
-      <!-- Left: Logo + Location -->
-      <div class="col d-flex align-items-center">
-        <a class="navbar-brand fw-bold d-flex align-items-center text-dark me-3" href="index.html">
-          <img src="images/logo.png" alt="Logo" height="40" class="me-2">
-        </a>
 
-        <!-- Location Dropdown -->
-        <div class="dropdown">
-          <button class="btn dropdown-toggle" type="button" id="locationDropdown" data-bs-toggle="dropdown">
-            Location
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="locationDropdown">
-            <li><a class="dropdown-item location-option" href="#" data-location="Bangalore">Bangalore</a></li>
-            <li><a class="dropdown-item location-option" href="#" data-location="Chennai">Chennai</a></li>
-            <li><a class="dropdown-item location-option" href="#" data-location="Coimbatore">Coimbatore</a></li>
-            <li><a class="dropdown-item location-option" href="#" data-location="Madurai">Madurai</a></li>
-            <li><a class="dropdown-item location-option" href="#" data-location="Trichy">Trichy</a></li>
-            <li><a class="dropdown-item location-option" href="#" data-location="Salem">Salem</a></li>
-          </ul>
-        </div>
+    <!-- Brand + Toggler -->
+    <div class="d-flex align-items-start align-items-sm-center w-100">
+      <!-- Logo -->
+      <a class="navbar-brand fw-bold d-flex align-items-center text-dark me-3 mb-2 mb-sm-0" href="index.html">
+        <img src="images/logo.png" alt="Logo" height="40" class="me-2">
+      </a>
+
+      <!-- Location Dropdown -->
+      <div class="dropdown mb-2 mb-sm-0">
+        <button class="btn dropdown-toggle" type="button" id="locationDropdown" data-bs-toggle="dropdown">
+          Location
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="locationDropdown">
+          <li><a class="dropdown-item location-option" href="#" data-location="Bangalore">Bangalore</a></li>
+          <li><a class="dropdown-item location-option" href="#" data-location="Chennai">Chennai</a></li>
+          <li><a class="dropdown-item location-option" href="#" data-location="Coimbatore">Coimbatore</a></li>
+          <li><a class="dropdown-item location-option" href="#" data-location="Madurai">Madurai</a></li>
+          <li><a class="dropdown-item location-option" href="#" data-location="Trichy">Trichy</a></li>
+          <li><a class="dropdown-item location-option" href="#" data-location="Salem">Salem</a></li>
+        </ul>
       </div>
 
-      <!-- Center: Menu -->
-      <div class="col-auto d-none d-lg-block">
-        <ul class="navbar-nav mx-auto flex-row gap-3">
+      <!-- Toggler Button -->
+      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+
+    <!-- Navbar content -->
+    <div class="collapse navbar-collapse mt-3" id="mainNavbar">
+      <div class="d-flex flex-column flex-sm-row justify-content-between align-items-start align-items-sm-center w-100">
+
+        <!-- Center: Menu -->
+        <ul class="navbar-nav flex-column flex-sm-row gap-2 gap-sm-4 mb-3 mb-sm-0">
           <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
           <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="howitwork.html">How it Works</a></li>
           <li class="nav-item"><a class="nav-link" href="ourproject.html">Our Projects</a></li>
         </ul>
+
+        <!-- CTA Button -->
+        <div class="d-flex justify-content-start justify-content-sm-end w-100 w-sm-auto">
+          <a href="contact.html" class="btn btn-sm btn-primary px-3" style="background-color: #001489 !important; font-size: 18px;">
+            Get Build Quote
+          </a>
+        </div>
       </div>
-
-<div class="col d-flex justify-content-end align-items-center gap-3" >
-  <a href="contact.html" class="btn btn-sm btn-primary px-3" style="background-color: #001489 !important; font-size: 18px;">
-    Get Build Quote
-  </a>
-</div>
-
     </div>
   </div>
 </nav>
+
 
 
 <!-- Contact Page Banner -->
@@ -134,7 +142,7 @@
       <div class="col-lg-5" data-aos="fade-out">
         <div class="single-contact-info-box">
           <h3 class="cntc-info-title">Contact Info</h3>
-          <div class="contact-information2" data-aos="fade-left" data-aos-delay="100">
+          <div class="contact-information2" data-aos="fade-in" data-aos-delay="100">
             <div class="contacts-icon">
               <i class="fa-solid fa-envelope"></i>
             </div>
@@ -143,7 +151,7 @@
               <h6><a href="mailto:puzzle@diplomats.co.in">puzzle@diplomats.co.in</a></h6>
             </div>
           </div>
-          <div class="contact-information2" data-aos="fade-left" data-aos-delay="150">
+          <div class="contact-information2" data-aos="fade-out" data-aos-delay="150">
             <div class="contacts-icon">
               <i class="fa-solid fa-phone"></i>
             </div>
@@ -152,7 +160,7 @@
               <h6><a href="tel:+917094858696">+91 70948 58696</a></h6>
             </div>
           </div>
-          <div class="contact-information2 upper2" data-aos="fade-left" data-aos-delay="200">
+          <div class="contact-information2 upper2" data-aos="fade-in" data-aos-delay="200">
             <div class="contacts-icon">
               <i class="fa-solid fa-location-dot"></i>
             </div>
@@ -161,7 +169,7 @@
               <h6>Bangalore, Dubai</h6>
             </div>
           </div>
-          <div class="follow-company-icon2 mt-3" data-aos="fade-left" data-aos-delay="250">
+          <div class="follow-company-icon2 mt-3" data-aos="fade-out" data-aos-delay="250">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
