--- a/contact.html
+++ b/contact.html
@@ -25,44 +25,44 @@
 <div id="preloader">
   <div class="spinner"></div>
 </div>
+
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg sticky-top bg-white shadow-sm">
-  <div class="container">
+  <div class="container-fluid px-5 py-2">
 
-    <!-- Brand + Toggler -->
-    <div class="d-flex align-items-start align-items-sm-center w-100">
-      <!-- Logo -->
-      <a class="navbar-brand fw-bold d-flex align-items-center text-dark me-3 mb-2 mb-sm-0" href="index.html">
+    <!-- Left: Logo + Location -->
+    <div class="d-flex align-items-center">
+      <a class="navbar-brand d-flex align-items-center me-3" href="index.html">
         <img src="images/logo.png" alt="Logo" height="40" class="me-2">
       </a>
 
       <!-- Location Dropdown -->
-      <div class="dropdown mb-2 mb-sm-0">
-        <button class="btn dropdown-toggle" type="button" id="locationDropdown" data-bs-toggle="dropdown">
+      <div class="dropdown">
+        <button class="btn dropdown-toggle" type="button" id="locationDropdown" data-bs-toggle="dropdown" aria-expanded="false">
           Location
         </button>
         <ul class="dropdown-menu" aria-labelledby="locationDropdown">
-          <li><a class="dropdown-item location-option" href="#" data-location="Bangalore">Bangalore</a></li>
-          <li><a class="dropdown-item location-option" href="#" data-location="Chennai">Chennai</a></li>
-          <li><a class="dropdown-item location-option" href="#" data-location="Coimbatore">Coimbatore</a></li>
-          <li><a class="dropdown-item location-option" href="#" data-location="Madurai">Madurai</a></li>
-          <li><a class="dropdown-item location-option" href="#" data-location="Trichy">Trichy</a></li>
-          <li><a class="dropdown-item location-option" href="#" data-location="Salem">Salem</a></li>
+          <li><a class="dropdown-item" href="#">Bangalore</a></li>
+          <li><a class="dropdown-item" href="#">Chennai</a></li>
+          <li><a class="dropdown-item" href="#">Coimbatore</a></li>
+          <li><a class="dropdown-item" href="#">Madurai</a></li>
+          <li><a class="dropdown-item" href="#">Trichy</a></li>
+          <li><a class="dropdown-item" href="#">Salem</a></li>
         </ul>
       </div>
-
-      <!-- Toggler Button -->
-      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
     </div>
 
-    <!-- Navbar content -->
-    <div class="collapse navbar-collapse mt-3" id="mainNavbar">
-      <div class="d-flex flex-column flex-sm-row justify-content-between align-items-start align-items-sm-center w-100">
+    <!-- Toggler Button (Mobile) -->
+    <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <!-- Center: Menu -->
-        <ul class="navbar-nav flex-column flex-sm-row gap-2 gap-sm-4 mb-3 mb-sm-0">
+    <!-- Nav Content -->
+    <div class="collapse navbar-collapse" id="mainNavbar">
+      <div class="d-flex flex-column flex-lg-row align-items-lg-center justify-content-start justify-content-lg-between w-100 mt-3 mt-lg-0">
+
+        <!-- Nav Links -->
+        <ul class="navbar-nav flex-column flex-lg-row gap-2 gap-lg-4 mx-0 mx-lg-auto text-start text-lg-center">
           <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
           <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
@@ -71,8 +71,8 @@
         </ul>
 
         <!-- CTA Button -->
-        <div class="d-flex justify-content-start justify-content-sm-end w-100 w-sm-auto">
-          <a href="contact.html" class="btn btn-sm btn-primary px-3" style="background-color: #001489 !important; font-size: 18px;">
+        <div class="mt-3 mt-lg-0 text-start text-lg-end">
+          <a href="contact.html" class="btn btn-primary px-4" style="background-color: #001489; font-size: 16px;">
             Get Build Quote
           </a>
         </div>
